--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,19 +25,19 @@
 
           </h3>
 </br>
-        <div class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
+        <!--<div class="social-media-list">-->
+          <!--{% if site.github_username %}-->
+          <!--<li>-->
+            <!--{% include icon-github.html username=site.github_username %}-->
+          <!--</li>-->
+          <!--{% endif %}-->
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </div>
+          <!--{% if site.twitter_username %}-->
+          <!--<li>-->
+            <!--{% include icon-twitter.html username=site.twitter_username %}-->
+          <!--</li>-->
+          <!--{% endif %}-->
+        <!--</div>-->
 
 
     </div>
